projet_gl/src/test/deca/context/invalid/2_07/2_07_1_DeclMethod.deca
// Description:
//    Problème de déclaration de field de type void
//
// Resultats:
//    Ligne 11: Method identifier declared in superclass and not declared as method type
// 
// Historique:
//    cree le 17/01/2024

class A {
    int fieldOne;
}

class B extends A {
    int fieldOne(){}
}